# Changelog

## Version 4.5.0

* Adding #267 new themes (thanks to Joey Catt | Onyx Studios)
* Adding #115 ability to provide concat file (thanks to Marco Ravich)
* Adding support for brightness, contrast and saturation filters

## Version 4.4.2

* Fixing #264 changelog encoding was causing crashes on non utf-8 systems (thanks to lobofoot)

## Version 4.4.1

* Fixing colorspace details from advanced page not applied to x265 (thanks to Tình Em Là Đại Dương)

## Version 4.4.0

* Adding #237 zoom option for thumbnail (thanks to Lev Abashkin)
* Adding #259 support for all available audio format per encoder (thanks to alpha-0)
* Adding support for ENV variables - FF_CONFIG, FF_LANG, FF_HDR10PLUS, FF_WORKDIR
* Fixing FastFlix could not start if setting profile could not find x265 encoder
* Fixing that downloading latest FFmpeg can fail to extract files if previous ones exist (thanks to ProFire)
* Fixing that VCEEncC needs to use nnedi filter for deinterlacing (thanks to Onyx)

## Version 4.3.1

* Adding VCEEncC decoder option
* Adding support for HDR10+ parser version 1.0.0 and above
* Fixing VCEEncC interlace being passed "False" string
* Fixing VCEEncC was not being passed profile option
* Fixing keep / remove chapters and metadata were not explicit in both cases

## Version 4.3.0

* Adding VCEEncC encoder support for HEVC and AVC
* Fixing Chinese translations (thanks to leonardyan)
* Fixing #256 Cannot load NVENC profiles because RC Lookahead is stored as int (thanks to Jan Hellwig)

## Version 4.2.3

* Fixing that the queue would not update errored films correctly
* Fixing "None" option for HDR -> SDR tonemap had to be lowercase

## Version 4.2.2

* Fixing output_directory not highest priority (thanks to cwills75)

## Version 4.2.1

* Adding support for source_directory and output_name_format in config file (thanks to cwills75)
* Fixing #129 no subtitles should be enabled, removing need for mkvpropedit (thanks to wiedemanu)