@@ -1,10 +1,7 @@
 # -*- coding: utf-8 -*-
 import logging
+import os
 import sys
-import pkg_resources
-from pathlib import Path
-
-# import importlib_resources
 
 import coloredlogs
 import reusables
@@ -16,27 +13,25 @@ from fastflix.models.config import Config, MissingFF
 from fastflix.models.fastflix import FastFlix
 from fastflix.models.fastflix_app import FastFlixApp
 from fastflix.program_downloads import ask_for_ffmpeg, latest_ffmpeg
-from fastflix.resources import main_icon, breeze_styles_path
+from fastflix.resources import main_icon, breeze_styles_path, get_bool_env
 from fastflix.shared import file_date, message
 from fastflix.version import __version__
 from fastflix.widgets.container import Container
 from fastflix.widgets.progress_bar import ProgressBar, Task
 
-# import fastflix.breeze_resources
-
 logger = logging.getLogger("fastflix")
 
 
 def create_app():
-    if hasattr(QtCore.Qt, "AA_EnableHighDpiScaling"):
-        QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_EnableHighDpiScaling, True)
-    if hasattr(QtCore.Qt, "AA_UseHighDpiPixmaps"):
-        QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_UseHighDpiPixmaps, True)
+    if not get_bool_env("FF_DPI_OFF"):
+        if hasattr(QtCore.Qt, "AA_EnableHighDpiScaling"):
+            QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_EnableHighDpiScaling, True)
+        if hasattr(QtCore.Qt, "AA_UseHighDpiPixmaps"):
+            QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_UseHighDpiPixmaps, True)
     main_app = FastFlixApp(sys.argv)
-    # main_app.setStyle("fusion")
     main_app.setApplicationDisplayName("FastFlix")
-    # my_font = QtGui.QFont("helvetica", 9, weight=57)
-    # main_app.setFont(my_font)
+    my_font = QtGui.QFont("helvetica", 9)
+    main_app.setFont(my_font)
     main_app.setWindowIcon(QtGui.QIcon(main_icon))
     return main_app
 
@@ -158,17 +153,11 @@ def start_app(worker_queue, status_queue, log_queue, queue_list, queue_lock):
         sys.exit(1)
 
     if app.fastflix.config.theme != "system":
-        # breeze_theme = importlib_resources.files(f'breeze_theme.{app.fastflix.config.theme}')
         QtCore.QDir.addSearchPath(app.fastflix.config.theme, str(breeze_styles_path / app.fastflix.config.theme))
         file = QtCore.QFile(f"{app.fastflix.config.theme}:stylesheet.qss")
         file.open(QtCore.QFile.OpenModeFlag.ReadOnly | QtCore.QFile.OpenModeFlag.Text)
         stream = QtCore.QTextStream(file)
         app.setStyleSheet(stream.readAll().replace("{{base_dir}}", str(breeze_styles_path)))
-
-        # file = QtCore.QFile(f":/{app.fastflix.config.theme}/stylesheet.qss")
-        # file.open(QtCore.QFile.ReadOnly | QtCore.QFile.Text)
-        # stream = QtCore.QTextStream(file)
-        # app.setStyleSheet(stream.readAll())
 
     logger.setLevel(app.fastflix.config.logging_level)
 
