@@ -1,17 +1,16 @@
 # -*- coding: utf-8 -*-
 from pathlib import Path
+import os
 
 import pkg_resources
 
 main_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icon.ico")).resolve())
 default_mode = Path(pkg_resources.resource_filename(__name__, "data/styles/default.qss")).resolve().read_text()
 
-
 changes_file = Path(pkg_resources.resource_filename(__name__, "CHANGES")).resolve()
 local_changes_file = Path(__file__).parent.parent / "CHANGES"
 
 loading_movie = str(Path(pkg_resources.resource_filename(__name__, "data/icons/loading.gif")).resolve())
-# checkmark_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/checkmark.png")).resolve())
 onyx_convert_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/onyx-convert.png")).resolve())
 onyx_queue_add_icon = str(Path(pkg_resources.resource_filename(__name__, "data/icons/onyx-add-queue.png")).resolve())
 
@@ -37,7 +36,19 @@ def get_text_color(theme: str):
 
 
 def group_box_style(pt="-10px", pb="5px", mt="5px", mb="0", bb="1px solid #bab9b8"):
-    return f"QGroupBox{{padding-top: {pt}; padding-bottom: {pb}; margin-bottom: {mb}; margin-top: {mt}; border: none; border-bottom: {bb}; border-radius: 0; }}"
+    return (
+        f"QGroupBox{{padding-top: {pt}; padding-bottom: {pb}; margin-bottom: {mb}; "
+        f"margin-top: {mt}; border: none; border-bottom: {bb}; border-radius: 0; }}"
+    )
 
 
 reset_button_style = "QPushButton{border: none; margin-left: 0; padding-left: 0; margin-top: 0;}"
+
+
+def get_bool_env(variable: str):
+    var = os.getenv(variable, "")
+    if not var:
+        return False
+    if var.lower() in ("1", "on", "yes", "true", "t"):
+        return True
+    return False
